# snowflakeos-module-manager

./: Cargo.toml  LICENSE  default.nix  flake.nix  meson.build
data/: org.snowflakeos.SnowflakeOSModuleManager.desktop.in.in  org.snowflakeos.SnowflakeOSModuleManager.gschema.xml.in  org.snowflakeos.SnowflakeOSModuleManager.metainfo.xml.in.in  org.snowflakeos.SnowflakeOSModuleManager.policy.in.in
data/resources/: resources.gresource.xml
smm-helper/: Cargo.toml
smm-helper/src/: main.rs  meson.build
src/: lib.rs  main.rs
src/modules/: load.rs  mod.rs  modify.rs
src/ui/: about.rs  error_dialog.rs  load.rs  mod.rs  modulecard_factory.rs  window.rs
src/ui/module/: list_option_factory.rs  mod.rs  option_factory.rs  page.rs
src/ui/rebuild/: changes_factory.rs  confirm_dialog.rs  mod.rs  rebuild_dialog.rs
