[package]
name = "snowflakeos-module-manager"
version = "0.0.1"
edition = "2021"
default-run = "snowflakeos-module-manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm4 = { version = "0.6", features = ["libadwaita", "macros", "gnome_43"]  }
relm4-components = "0.6"
# gtk = { package = "gtk4", version = "0.5", features = ["v4_6"] }
adw = { package = "libadwaita", version = "0.4", features = ["v1_3"] }

vte = { package = "vte4", version = "0.6" }

nix-data = { git = "https://github.com/snowflakelinux/nix-data" }
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.5"
walkdir = "2.3"

serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
serde_yaml = "0.9"
# ijson = "0.1"

nix-editor = "0.3.0"
nixpkgs-fmt = "1.3"
tracker = "0.2"

[workspace]
members = [".", "smm-helper"]
default-members = [".", "smm-helper"]
